--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,9 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  vertical-align: top;
 }
 
-/* Мобильное меню и форму обратной связи я не успел сделать. С галереей у меня не получилось совсем */
 .container {
   width: 90%;
   max-width: 1170px;
@@ -60,7 +60,7 @@ img {
 header {
   width: 100%;
   position: fixed;
-  z-index: 9999999;
+  z-index: 10;
 }
 
 .logo svg {
@@ -328,11 +328,23 @@ header {
   color: #2c4058;
   font-family: "Open Sans", sans-serif;
   font-style: italic;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.projects_location-link:hover {
+  color: #7e5aff;
+}
+.projects_location-link:hover svg {
+  fill: #55b7ff;
 }
 .projects_location-link svg {
   width: 16px;
   height: 16px;
   fill: #2c4058;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .btn-more {
@@ -450,8 +462,8 @@ header {
   top: 0;
   opacity: 0;
   background: white;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(46%, rgba(255, 255, 255, 0)), color-stop(87%, rgba(0, 0, 0, 0.6306897759)));
   background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759) 87%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(46%, rgba(255, 255, 255, 0)), color-stop(87%, rgba(0, 0, 0, 0.6306897759)));
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759) 87%);
 }
 .news_list-item_link:hover::after {
@@ -560,21 +572,22 @@ header {
 }
 
 .gallery {
-  padding: 180px 0 140px 0;
+  padding: 180px 0 140px;
   text-align: center;
 }
 .gallery_title {
-  color: #2c4058;
   margin-bottom: 100px;
-  position: relative;
-  font-family: "gotham-medium-webfont", sans-serif;
 }
 .gallery_wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 10px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin-bottom: 60px;
+  width: 100%;
+  gap: 10px;
 }
 .gallery_wrap a:hover span {
   opacity: 1;
@@ -633,14 +646,13 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 10px;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  gap: 10px;
-  width: calc(50%);
 }
 .gallery_inner_second a {
-  width: calc(48%);
-  position: relative;
+  display: block;
+  width: calc(50% - 5px);
 }
 .gallery .btn-see {
   margin: 0 auto;
@@ -721,7 +733,7 @@ footer {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   top: -56%;
-  z-index: 1000;
+  z-index: 1;
   -webkit-box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.2);
 }
@@ -777,12 +789,24 @@ footer {
   color: #2c4058;
   font-family: "GothamBook", sans-serif;
   font-size: 1.125rem;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.contact-card_list-item a:hover {
+  color: #7e5aff;
+}
+.contact-card_list-item a:hover svg {
+  fill: #2c4058;
 }
 .contact-card_list-item svg {
   width: 16px;
   height: 16px;
   fill: #7e5aff;
   margin-right: 5px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .contact-card .btn-submit {
   max-width: 140px;
@@ -819,9 +843,6 @@ footer {
   }
   .gallery_inner {
     width: 100%;
-  }
-  .gallery_inner a {
-    width: calc(49%);
   }
 }
 @media screen and (max-width: 820px) {
