--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,10 +36,87 @@
     display: none;
 }
 
+#mobile_shadow{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: rgb(30,109,166);
+    background: linear-gradient(130deg, rgba(30,109,166,0.3757878151260504) 3%, rgba(74,57,134,0.2665441176470589) 95%);
+    backdrop-filter: blur(3px);
+    z-index: 500;
+    transition: all .4s;
+}
+
+.open_shadow{
+   &#mobile_shadow{
+    display: block;
+} 
+} 
+
+.mobile_menu{
+    position: fixed;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    top: 0;
+    left: -110%;
+    height: 100vh;
+    width: 90%;
+    max-width: 320px;
+    background: rgb(85,183,255);
+    background: linear-gradient(130deg, rgba(85,183,255,0.8099614845938375) 13%, rgba(126,90,255,0.7987570028011204) 82%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 501;
+    transition: all .4s;
+    .header_list{
+        display: flex;
+        flex-direction: column;
+        height: 60%;
+        justify-content: space-between;
+        &-item{
+            a{
+                letter-spacing: 4px;
+            }
+        }
+    }
+}
+
+#menu_close{
+    width: 2px;
+    height: 40px;
+    background: $font-color-white;
+    transform: rotate(45deg);
+    position: relative;
+    cursor: pointer;
+    &::after{
+        content: '';
+        position: absolute;
+        
+        display: block;
+        width: 2px;
+        height: 40px;
+        transform: rotate(90deg);
+        background: $font-color-white;
+
+
+    }
+}
+
+.open_menu{
+    &.mobile_menu{
+        left: 0;
+    }
+}
+
 header{
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 401;
 }
 
 .logo{
@@ -745,7 +822,7 @@ footer{
         -ms-transform: translateX(-50%);
             transform: translateX(-50%);
     top: -56%;
-    z-index: 1;
+    z-index: 400;
     -webkit-box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
             box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
     &_title{
