--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,7 +46,7 @@
     background: rgb(30,109,166);
     background: linear-gradient(130deg, rgba(30,109,166,0.3757878151260504) 3%, rgba(74,57,134,0.2665441176470589) 95%);
     backdrop-filter: blur(3px);
-    z-index: 500;
+    z-index: 1002;
     transition: all .4s;
 }
 
@@ -71,7 +71,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    z-index: 501;
+    z-index: 1003;
     transition: all .4s;
     .header_list{
         display: flex;
@@ -116,7 +116,7 @@
 header{
     width: 100%;
     position: fixed;
-    z-index: 401;
+    z-index: 1001;
 }
 
 .logo{
@@ -822,7 +822,7 @@ footer{
         -ms-transform: translateX(-50%);
             transform: translateX(-50%);
     top: -56%;
-    z-index: 400;
+    z-index: 1000;
     -webkit-box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
             box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
     &_title{
@@ -1085,6 +1085,17 @@ footer{
             >li {
                 margin-right: 5px;
             }
+        }
+    }
+    /* .footer{
+
+    } */
+    .footer_copy{
+        & span:nth-child(2){
+            display: none;
+        }
+        & span:nth-child(1){
+            margin-right: 100px;
         }
     }
 }
