--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,9 +65,13 @@ img {
   height: 100%;
   display: none;
   background: #1e6da6;
+  background: -o-linear-gradient(320deg, rgba(30, 109, 166, 0.3757878151) 3%, rgba(74, 57, 134, 0.2665441176) 95%);
   background: linear-gradient(130deg, rgba(30, 109, 166, 0.3757878151) 3%, rgba(74, 57, 134, 0.2665441176) 95%);
+  -webkit-backdrop-filter: blur(3px);
   backdrop-filter: blur(3px);
   z-index: 1002;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
   transition: all 0.4s;
 }
 
@@ -85,18 +89,36 @@ img {
   width: 90%;
   max-width: 320px;
   background: #55b7ff;
+  background: -o-linear-gradient(320deg, rgba(85, 183, 255, 0.8099614846) 13%, rgba(126, 90, 255, 0.7987570028) 82%);
   background: linear-gradient(130deg, rgba(85, 183, 255, 0.8099614846) 13%, rgba(126, 90, 255, 0.7987570028) 82%);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   z-index: 1003;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
   transition: all 0.4s;
 }
 .mobile_menu .header_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   height: 60%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .mobile_menu .header_list-item a {
@@ -107,6 +129,8 @@ img {
   width: 2px;
   height: 40px;
   background: #fff;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   position: relative;
   cursor: pointer;
@@ -117,6 +141,8 @@ img {
   display: block;
   width: 2px;
   height: 40px;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
   transform: rotate(90deg);
   background: #fff;
 }
@@ -765,7 +791,7 @@ footer {
   overflow: visible;
 }
 .footer_wrapper {
-  width: 100%;
+  width: 90%;
   max-width: 770px;
   margin: 0 auto;
   display: -webkit-box;
